# deer-flow

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING  Dockerfile  LICENSE  Makefile  README.md  README_de.md  README_es.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md  bootstrap.bat  bootstrap.sh  conf.yaml.example  docker-compose.yml  langgraph.json  main.py  pyproject.toml  server.py  test_fix.py
.github/: lint.yaml
.github/workflows/: container.yaml  lint.yaml  lint.yml  test.yml  unittest.yaml
ai-editor-standalone/: .env.local.example  .gitignore  CHANGELOG.md  INTEGRATION.md  README.md  USAGE_GUIDE.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
ai-editor-standalone/scripts/: dev.sh  install-deps.sh  test-ai.js
ai-editor-standalone/src/: index.ts
docs/: FAQ.md  configuration_guide.md  mcp_integrations.md  novel-tiptap-prosemirror-learning-report.md  sse_integration_test.md
examples/: AI_adoption_in_healthcare.md  Cristiano_Ronaldo's_Performance_Highlights.md  Quantum_Computing_Impact_on_Cryptography.md  bitcoin_price_fluctuation.md  how_to_use_claude_deep_research.md  nanjing_tangbao.md  openai_sora_report.md  what_is_agent_to_agent_protocol.md  what_is_llm.md  what_is_mcp.md
src/: __init__.py  workflow.py
src/agents/: __init__.py  agents.py
src/config/: __init__.py  agents.py  configuration.py  loader.py  questions.py  report_style.py  tools.py
src/crawler/: __init__.py  article.py  (+3 more)
tests/: test_state.py
web/: .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.js  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js
(+323 files in other folders)
